--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
     -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Yellowtail&display=swap"
+    rel="stylesheet">
   <title>Flawless Dynasty</title>
 </head>
 
