--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,9 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload"
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Yellowtail&display=swap"
+  <link defer href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Yellowtail&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Yellowtail&display=swap"
-    media="print" onload="this.media='all'">
+
   <!-- Meta Pixel Code -->
   <script>
     !function (f, b, e, v, n, t, s) {
